# build_dagger

./: .gitignore  Dockerfile  adjectives.csv  build_dagger.py  dagger.json  pyproject.toml
src/: __init__.py  builder.py  cli.py
